# callpilot_ai

./: MANIFEST.in  README.md  debug_ai.py  debug_bolna.py  patch_settings.py  pyproject.toml  requirements.txt  setup.py
callpilot_ai/: __init__.py  hooks.py  modules.txt
callpilot_ai/api/: analyzer.py  bolna.py  bulk_analyzer.py  outscraper.py  post_call_analyzer.py  scraper.py  vapi_integration.py  webhook.py  webhooks.py
callpilot_ai/callpilot_ai/doctype/callpilot_credit_ledger/: callpilot_credit_ledger.json  callpilot_credit_ledger.py
callpilot_ai/callpilot_ai/doctype/callpilot_log/: callpilot_log.json
callpilot_ai/callpilot_ai/doctype/callpilot_settings/: callpilot_settings.json
callpilot_ai/callpilot_ai/doctype/lead_finder_campaign/: lead_finder_campaign.json  lead_finder_campaign.py
callpilot_ai/callpilot_ai/doctype/lead_finder_settings/: lead_finder_settings.js  lead_finder_settings.json  lead_finder_settings.py
callpilot_ai/doctype/call_log/: call_log.json  call_log.py
callpilot_ai/doctype/callpilot_log/: callpilot_log.py
callpilot_ai/doctype/callpilot_settings/: callpilot_settings.py
callpilot_ai/page/callpilot_dashboard/: callpilot_dashboard.html  callpilot_dashboard.js  callpilot_dashboard.json  callpilot_dashboard.py
callpilot_ai/public/js/: lead_list.js
