[project]
name = "callpilot_ai"
authors = [
    { name = "Nexgen", email = "nexgen@example.com"}
]
description = "AI Voice Agent"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

